--- a/RStudio/NotebookDatenVerstehen.Rmd
+++ b/RStudio/NotebookDatenVerstehen.Rmd
@@ -11,8 +11,8 @@ library(ROSE)
 library(ranger)
 
 
-#training <- read_csv("C:/Users/fvoss/Desktop/Studienarbeit/training.csv",
-training <- read_csv("C:/Users/fvoss/Google Drive/Uni_5_Semester/Studienarbeit/training.csv", 
+training <- read_csv("C:/Users/fvoss/Desktop/Studienarbeit/training.csv",
+#training <- read_csv("C:/Users/fvoss/Google Drive/Uni_5_Semester/Studienarbeit/training.csv", 
     col_types = cols(RefId = col_number(), 
         VehYear = col_number(), VehicleAge = col_number(), 
         WheelTypeID = col_number(), VehOdo = col_number(), 
@@ -423,31 +423,14 @@ modelData <- filteredDataBalanced
 
 
 
-Make Ranger Tuning Stuff
-```{r}
-library(tuneRanger)
-
-tuneData <- modelData
-
-tuneData.task = makeClassifTask(data = tuneData, target = "IsBadBuy")
-
-
-estimateTimeTuneRanger(tuneData.task)
-
-res = tuneRanger(tuneData.task,
-                 measure = list(auc),
-                 tune.parameters = c("mtry", "min.node.size", "sample.fraction"),
-                 num.trees = 100
-                 )
-```
 
 
 
 PREPARE TEST DATA
 
 ```{r}
-#testData <- read_csv("C:/Users/fvoss/Desktop/Studienarbeit/test.csv", 
-testData <- read_csv("C:/Users/fvoss/Google Drive/Uni_5_Semester/Studienarbeit/test.csv",
+testData <- read_csv("C:/Users/fvoss/Desktop/Studienarbeit/test.csv", 
+#testData <- read_csv("C:/Users/fvoss/Google Drive/Uni_5_Semester/Studienarbeit/test.csv",
     col_types = cols(RefId = col_number(), 
         VehYear = col_number(), 
         VehicleAge = col_number(), 
@@ -606,6 +589,29 @@ data_validation <- slice(modelData, -training_rows)
 MODELLING
 
 
+Make Ranger Tuning Stuff
+```{r}
+library(tuneRanger)
+
+tuneData <- data_training
+
+tuneData.task = makeClassifTask(data = tuneData, target = "IsBadBuy")
+
+
+estimateTimeTuneRanger(tuneData.task)
+
+res = tuneRanger(tuneData.task,
+                 measure = list(auc),
+                 tune.parameters = c("mtry", "min.node.size", "sample.fraction"),
+                 num.trees = 1500,
+                 iters = 120
+                 )
+```
+
+
+
+
+
 
 ```{r}
 rf_01 <- ranger(IsBadBuy ~ ., data = data_training, 
@@ -626,7 +632,7 @@ Mache Vorhersagen
 
 ```{r}
 
-predictions_validation_01 <- predict(rf_01, data = data_validation, type = "response")$predictions[,2]
+predictions_validation_01 <- predict(res$model$learner.model, data = data_validation, type = "response")$predictions[,2]
 head(predictions_validation_01)
 predictions_validation_binary_01 <- ifelse(predictions_validation_01>0.5, "1" ,"0")
 
@@ -664,7 +670,7 @@ anaData <- anaData %>%
 PREDICT ON TEST DATA
 
 ```{r}
-predictions_validation_01 <- predict(rf_01, data = testData, type = "response")$predictions[,2]
+predictions_validation_01 <- predict(res$model$learner.model, data = testData, type = "response")$predictions[,2]
 head(predictions_validation_01)
 predictions_validation_binary_01 <- ifelse(predictions_validation_01>0.5,"1","0")
 
